# pydala2

./: .gitignore  404.html  AGENTS.md  LICENSE  README.md  REFACTORING_ANALYSIS.md  REFACTORING_SUMMARY.md  abc.json  catalog.yaml  index.html  mkdocs.yml  objects.inv  pyproject.toml  pyproject.toml.pdm  pyproject.toml.poetry  requirements.txt  sitemap.xml  tale_of_pydala2.md  test.json  test.py  test2.json
.github/workflow/: publish.yml
REFACTORING/: index.html
REFACTORING_SUMMARY/: index.html
advanced/deployment/: index.html
advanced/integration/: index.html
advanced/performance-tuning/: index.html
advanced/troubleshooting/: index.html
api/catalog/: index.html
api/core/: index.html
api/datasets/: index.html
api/filesystem/: index.html
api/metadata/: index.html
api/overview/: index.html
api/table/: index.html
api/utilities/: index.html
backup/: dataset.py.backup  filesystem.py.backup  io.py.backup  metadata.py.backup
dev/: catalog.yml  test_dataset.py
docs/: REFACTORING.md  REFACTORING_SUMMARY.md  getting-started.md  index.md  quick-start.md
docs/adr/: 0001-consolidate-dataset-lifecycle.md
docs/advanced/: deployment.md  integration.md  performance-tuning.md  troubleshooting.md
docs/agents/: domain.md  issue-tracker.md  triage-labels.md
docs/api/: catalog.md  core.md  datasets.md  filesystem.md  metadata.md  overview.md  table.md  utilities.md
docs/plans/: fsspeckit-merge-replaces-delta-prd.md
docs/stylesheets/: extra.css
docs/user-guide/: basic-usage.md  catalog-management.md  data-operations.md  merge.md  metadata.md  performance.md  schema-management.md
examples/: README.md
examples/advanced-querying/: README.md  advanced_querying.ipynb  advanced_querying.py
examples/basic-dataset-operations/: README.md  basic_operations.ipynb  basic_operations.marimo.py  basic_operations.py
examples/cloud-storage-s3/: README.md  cloud_storage_s3.ipynb  cloud_storage_s3.marimo.py  cloud_storage_s3.py
examples/data-loading-conversion/: README.md  data_loading.ipynb  data_loading.marimo.py  data_loading.py
examples/metadata-management/: README.md  metadata_management.ipynb  metadata_management.marimo.py  metadata_management.py
examples/performance-optimization/: README.md  performance_optimization.ipynb  performance_optimization.marimo.py  performance_optimization.py
examples/time-series-data/: README.md  time_series_data.ipynb  time_series_data.marimo.py  time_series_data.py
getting-started/: index.html
processed_delta/: part-00001-c861c13a-d93a-42ed-9cc3-0e36645e20f4-c000.snappy.parquet
pydala/: REFACTORING_SUMMARY.md  __init__.py  cache.py  catalog.py  catalog2.py  config.py  constants.py  converters.py  dataset.py  dataset_refactored.py  dataset_simplified.py  filesystem.py  handlers.py  helpers.py  io.py  metadata.py  metadata_helpers.py  metadata_simplified.py  migrate_to_simplified.py  optimize.py  polars_ext.py  schema.py  sort_handler.py  table.py  table_scanner.py  utils.py
pydala/adapters/: fsspeckit.py
pydala/core/: metadata.py  reader.py  writer.py
pydala/dataset/: __init__.py  base.py  data_processor.py  dataset_filter.py  dataset_writer.py  datasets.py  file_manager.py  optimizer.py  reader.py  writer.py
pydala/filesystem/: REFACTORING_SUMMARY.md  __init__.py  cache.py  converters.py  core.py  extensions.py  monitoring.py  test_refactored.py  utils.py
pydala/helpers/: _fsspec_util.py  _metadata.py  dataset.py  datetime.py  fsspec_util.py  io.py  metadata.py  misc.py  polars.py  polars_ext.py  security.py  sql.py
pydala/metadata/: __init__.py  core.py  parquet.py
pydala/simplified/: __init__.py  config.py  dataset.py  db_manager.py  example_usage.py  filesystem_manager.py  filtering.py  loader.py  optimization.py  partitioning.py  writer.py
quick-start/: index.html
search/: search_index.json
src/pydala/: dataset.py  utils.py
tests/: conftest.py  test_dataset_lifecycle.py  test_dataset_merge.py  test_delta_deprecation.py  test_delta_write_contract.py  test_filesystem_contract.py  test_fsspeckit_adapter.py  test_fsspeckit_maintenance.py  test_helpers_contract.py  test_merge_docs.py  test_misc.py  test_p0_bugs.py  test_schema_contract.py  test_schema_repair_dataset.py  test_security.py  test_sql_contract.py  test_table.py  test_table_conversion.py  test_writer_prepare.py
user-guide/basic-usage/: index.html
user-guide/catalog-management/: index.html
user-guide/data-operations/: index.html
user-guide/metadata/: index.html
user-guide/performance/: index.html
user-guide/schema-management/: index.html
