[project]
authors = [{ name = "Volker L.", email = "ligno.blades@gmail.com" }]
dependencies = [
  "pyarrow>=12.0.1",
  "s3fs>=2023.6.0",
  "duckdb>=0.10.0",
  "tqdm>=4.65.0",
  "pandas>=2.0.3",
  "munch>=4.0.0",
  "sqlglot>=23.11.2",
  "psutil>=6.0.0",
  "pyyaml>=6.0.2",
  "loguru>=0.7.2",
  "fsspec>=2025.1.0",
  "fsspeckit>=0.27.1",
  "brotli>=1.1.0",
  "polars>=0.20.4",
]
description = "poor man´s data lake"
#homepage = "https://github.com/legout/pydala2"
license = { text = "MIT" }
name = "pydala2"
readme = "README.md"
#repository = "https://github.com/legout/pydala2"
requires-python = ">= 3.12"
version = "0.27.1"

[project.optional-dependencies]
legacy = ["polars-lts-cpu>=0.20.4"]

[build-system]
build-backend = "hatchling.build"
requires = ["hatchling==1.26.3", "hatch-vcs"]

# [build-system]
# build-backend = "setuptools.build_meta"
# requires = ["setuptools>=42", "wheel"]

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["pydala"]

[dependency-groups]
test = ["pytest>=8.4.2", "pytest-cov>=7.0.0"]

docs = [
  "mkdocs>=1.6.1",
  "mkdocs-git-revision-date-localized-plugin>=1.4.7",
  "mkdocs-material>=9.6.20",
  "mkdocs-material-extensions>=1.3.1",
  "mkdocs-mermaid2-plugin>=1.2.2",
  "mkdocstrings>=0.30.1",
  "mkdocstrings-python>=1.18.2",
]

notebook = ["ipython>=9.5.0", "jupyterlab>=4.4.7", "marimo>=0.15.3"]

dev = [
  { include-group = "test" },
  { include-group = "docs" },
  { include-group = "notebook" },
]
